gawk: Autospec creation for update from version 4.1.4 to version 4.2.0
	* 4.2.0: Release tar ball made.

2017-10-17         Andrew J. Schorr      <aschorr@telemetry-investments.com>

	* NEWS: Actually, isarray is not deprecated in this release.
	* builtin.c (do_isarray): Remove lint warning deprecating isarray.

2017-10-14         Arnold D. Robbins     <arnold@skeeve.com>

	* field.c (do_split): Simplify the lint warnings.
	Based on suggested code by Eric Pruitt <eric.pruitt@gmail.com>.

2017-10-08         Arnold D. Robbins     <arnold@skeeve.com>

	* command.y: Fix the FSF's address.

(NEWS truncated at 15 lines)

--- a/options.conf
+++ b/options.conf
@@ -1,3 +1,8 @@
+[package]
+name = gawk
+url = http://ftp.gnu.org/gnu/gawk/gawk-4.2.0.tar.xz
+archives = 
+
 [autospec]
 # build 32 bit libraries
 32bit = false
