--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = gawk
 url = https://mirrors.kernel.org/gnu/gawk/gawk-4.2.1.tar.xz
 archives = 
-giturl = 
+giturl = https://git.savannah.gnu.org/git/gawk.git
 
 [autospec]
 # build 32 bit libraries
