--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = gawk
-url = https://mirrors.kernel.org/gnu/gawk/gawk-5.0.0.tar.xz
+url = https://mirrors.kernel.org/gnu/gawk/gawk-5.0.1.tar.xz
 archives = 
 giturl = https://git.savannah.gnu.org/git/gawk.git
 
@@ -52,7 +52,7 @@ use_avx512 = false
 # add clang flags
 use_clang = false
 # configure build for lto
-use_lto = false
+use_lto = true
 # require package verification for build
 verify_required = true
 
