--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = gawk
-url = https://mirrors.kernel.org/gnu/gawk/gawk-5.0.1.tar.xz
+url = https://mirrors.kernel.org/gnu/gawk/gawk-5.1.0.tar.xz
 archives = 
 giturl = https://git.savannah.gnu.org/git/gawk.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -38,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
