--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = gawk
-url = https://mirrors.kernel.org/gnu/gawk/gawk-5.1.0.tar.xz
+url = https://mirrors.kernel.org/gnu/gawk/gawk-5.1.1.tar.xz
 archives = 
 giturl = https://git.savannah.gnu.org/git/gawk.git
 domain = 
@@ -47,6 +47,8 @@ optimize_size = false
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = false
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
