--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = gawk
-url = https://mirrors.kernel.org/gnu/gawk/gawk-5.2.0.tar.xz
+url = https://mirrors.kernel.org/gnu/gawk/gawk-5.2.1.tar.xz
 archives = 
 giturl = https://git.savannah.gnu.org/git/gawk.git
 domain = 
@@ -35,6 +35,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not use the replacement pattern for file matching
+no_glob = false
 # do not generate debuginfo for this package
 nodebug = false
 # disable stripping binaries
