--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = gawk
-url = https://mirrors.kernel.org/gnu/gawk/gawk-5.2.2.tar.xz
+url = https://mirrors.kernel.org/gnu/gawk/gawk-5.3.0.tar.gz
 archives = 
 giturl = https://git.savannah.gnu.org/git/gawk.git
 domain = 
@@ -71,6 +71,8 @@ use_avx512 = false
 use_clang = false
 # configure build for lto
 use_lto = true
+# use ninja build files
+use_ninja = false
 # require package verification for build
 verify_required = true
 
