--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = gawk
-url = https://mirrors.kernel.org/gnu/gawk/gawk-5.3.1.tar.gz
+url = https://mirrors.kernel.org/gnu/gawk/gawk-5.3.2.tar.gz
 archives = 
 giturl = https://git.savannah.gnu.org/git/gawk.git
 domain = 
@@ -16,7 +16,7 @@ allow_test_failures = false
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
-autoupdate = false
+autoupdate = true
 # try to use mock short circuit to avoid full rebuilds
 avoid_rebuild = false
 # extend flags with '-std=gnu++98
